version switch: reapply fix for mouse out glitch between button and dialog
by creating an overlap
   original: 0d8463472fe93787baff7526aa54666e5d5f2b50

Pull Request: https://projects.blender.org/blender/blender-manual/pulls/104777

--- a/build_files/theme/css/version_switch.css
+++ b/build_files/theme/css/version_switch.css
@@ -58,7 +58,7 @@
 .version-dialog {
 	display: none;
 	position: absolute;
-	bottom: 28px;
+	bottom: 24px;
 	width: 50%;
 	margin: 0 5px;
 	border-radius: 3px;
